# tunnel-irrigation

./: CMakeLists.txt  README.md  sdkconfig
include/: adc_config.h  ap_mode.h  control.h  day_time.h  http.h  idle.h  irrigation.h  nvm_storage.h  pwm.h  settings.h  soil_humidity.h  task.h  temperature.h  water_level.h  wifi.h
main/: CMakeLists.txt  Kconfig.projbuild  adc_config.c  ap_mode.c  control.c  day_time.c  http.c  idle.c  irrigation.c  main.c  nvm_storage.c  pwm.c  settings.c  soil_humidity.c  task.c  temperature.c  water_level.c  wifi.c
main/ulp/: macro.S  ulp_test.S  wakeup.S
